src/test/deca/syntax/invalid/test_synt/control_structures/while_bad_nest.deca
// Description:
//    Declaration dun while mal indente dans un autre while
//
// Resultats:
//    Pas d'erreur
//
// Historique:
//    cree le 14/01/2022

{
    while(true) {
        while(true) {

        
    }
}